dev/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from Grammar.y
-----------------------------------------------------------------------------

state 81 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> prods                          (0)
	prods -> FuncDeclaration                           (1)
	prods -> prods FuncDeclaration                     (2)
	FuncDeclaration -> funcName ':' FuncBodyInitArea Exp   (3)
	FuncDeclaration -> Main                            (4)
	Exp -> Cond                                        (5)
	Exp -> Equals                                      (6)
	Exp -> OutPattern                                  (7)
	Exp -> '(' Exp ')'                                 (8)
	Exp -> Exp ';' Exp                                 (9)
	Maths -> Maths '+' Maths                           (10)
	Maths -> Maths '-' Maths                           (11)
	Maths -> Maths '*' Maths                           (12)
	Maths -> Maths '/' Maths                           (13)
	Maths -> '(' Maths ')'                             (14)
	Maths -> intValue                                  (15)
	Maths -> var                                       (16)
	Equals -> Match '=' OutPattern                     (17)
	Equals -> Match '=' Maths                          (18)
	Equals -> Match '=' Equals                         (19)
	Equals -> var '=' Maths                            (20)
	Equals -> var '=' B                                (21)
	T -> boolType                                      (22)
	T -> intType                                       (23)
	B -> trueValue                                     (24)
	B -> falseValue                                    (25)
	Var -> var ':' T                                   (26)
	VarInit -> Var '=' intValue                        (27)
	VarInit -> Var '=' B                               (28)
	VarInit -> Var '=' var                             (29)
	Match -> '[' ']'                                   (30)
	Match -> '[' eof ']'                               (31)
	Match -> '[' Var ']'                               (32)
	Match -> '[' Var ',' MatchRec                      (33)
	MatchRec -> Var ']'                                (34)
	MatchRec -> Var ',' MatchRec                       (35)
	OutPattern -> '[' ']'                              (36)
	OutPattern -> '[' Maths ',' OutPatternRec          (37)
	OutPattern -> '[' Maths ']'                        (38)
	OutPatternRec -> Maths ']'                         (39)
	OutPatternRec -> Maths ',' OutPatternRec           (40)
	Comparables -> Maths                               (41)
	Comparables -> B                                   (42)
	ComparableExp -> ComparableExp '==' ComparableExp   (43)
	ComparableExp -> ComparableExp '<' ComparableExp   (44)
	ComparableExp -> ComparableExp '>' ComparableExp   (45)
	ComparableExp -> '!' ComparableExp                 (46)
	ComparableExp -> '(' ComparableExp ')'             (47)
	ComparableExp -> Comparables                       (48)
	Cond -> if '(' ComparableExp ')' ':' Exp else ':' Exp   (49)
	FuncBodyInitArea -> '{' '}'                        (50)
	FuncBodyInitArea -> '{' VarInit '}'                (51)
	FuncBodyInitArea -> '{' VarInit ';' FuncBodyInitAreaRec   (52)
	FuncBodyInitAreaRec -> VarInit '}'                 (53)
	FuncBodyInitAreaRec -> VarInit ';' FuncBodyInitAreaRec   (54)
	Main -> main ':' stdin '>>' funcName '>>' MainRec   (55)
	Main -> main ':' stdin '>>' funcName '>>' stdout   (56)
	MainRec -> funcName '>>' stdout                    (57)
	MainRec -> funcName '>>' MainRec                   (58)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	intValue       { TokenIntValue _ $$ }
	var            { TokenVar _ $$ }
	funcName       { TokenFuncName _ $$ }
	'='            { TokenEq _ }
	'+'            { TokenPlus _ }
	'-'            { TokenMinus _ }
	'*'            { TokenTimes _ }
	'/'            { TokenDiv _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	':'            { TokenColon _ }
	'['            { TokenLBracket _ }
	']'            { TokenRBracket _ }
	'{'            { TokenLCurlyBracket _ }
	'}'            { TokenRCurlyBracket _ }
	','            { TokenComma _ }
	'>>'           { TokenPipe _ }
	intType        { TokenTypeInt _ }
	eof            { TokenEOF _ }
	boolType       { TokenTypeBool _ }
	';'            { TokenSemiColon _ }
	if             { TokenIf _ }
	else           { TokenElse _ }
	main           { TokenMain _ }
	trueValue      { TokenTrueValue _ }
	falseValue     { TokenFalseValue _ }
	'=='           { TokenCompare _ }
	'!'            { TokenNot _ }
	'<'            { TokenSmallerThan _ }
	'>'            { TokenGreaterThan _ }
	stdin          { TokenStdin _ }
	stdout         { TokenStdout _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	prods           rules 1, 2
	FuncDeclaration rules 3, 4
	Exp             rules 5, 6, 7, 8, 9
	Maths           rules 10, 11, 12, 13, 14, 15, 16
	Equals          rules 17, 18, 19, 20, 21
	T               rules 22, 23
	B               rules 24, 25
	Var             rule  26
	VarInit         rules 27, 28, 29
	Match           rules 30, 31, 32, 33
	MatchRec        rules 34, 35
	OutPattern      rules 36, 37, 38
	OutPatternRec   rules 39, 40
	Comparables     rules 41, 42
	ComparableExp   rules 43, 44, 45, 46, 47, 48
	Cond            rule  49
	FuncBodyInitArea rules 50, 51, 52
	FuncBodyInitAreaRec rules 53, 54
	Main            rules 55, 56
	MainRec         rules 57, 58

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	funcName       shift, and enter state 4
	main           shift, and enter state 5

	prods          goto state 6
	FuncDeclarationgoto state 2
	Main           goto state 3

State 1


	funcName       shift, and enter state 4
	main           shift, and enter state 5

	FuncDeclarationgoto state 2
	Main           goto state 3

State 2

	prods -> FuncDeclaration .                          (rule 1)

	funcName       reduce using rule 1
	main           reduce using rule 1
	%eof           reduce using rule 1


State 3

	FuncDeclaration -> Main .                           (rule 4)

	funcName       reduce using rule 4
	main           reduce using rule 4
	%eof           reduce using rule 4


State 4

	FuncDeclaration -> funcName . ':' FuncBodyInitArea Exp    (rule 3)

	':'            shift, and enter state 9


State 5

	Main -> main . ':' stdin '>>' funcName '>>' MainRec    (rule 55)
	Main -> main . ':' stdin '>>' funcName '>>' stdout    (rule 56)

	':'            shift, and enter state 8


State 6

	%start_parseCalc -> prods .                         (rule 0)
	prods -> prods . FuncDeclaration                    (rule 2)

	funcName       shift, and enter state 4
	main           shift, and enter state 5
	%eof           accept

	FuncDeclarationgoto state 7
	Main           goto state 3

State 7

	prods -> prods FuncDeclaration .                    (rule 2)

	funcName       reduce using rule 2
	main           reduce using rule 2
	%eof           reduce using rule 2


State 8

	Main -> main ':' . stdin '>>' funcName '>>' MainRec    (rule 55)
	Main -> main ':' . stdin '>>' funcName '>>' stdout    (rule 56)

	stdin          shift, and enter state 12


State 9

	FuncDeclaration -> funcName ':' . FuncBodyInitArea Exp    (rule 3)

	'{'            shift, and enter state 11

	FuncBodyInitAreagoto state 10

State 10

	FuncDeclaration -> funcName ':' FuncBodyInitArea . Exp    (rule 3)

	var            shift, and enter state 23
	'('            shift, and enter state 24
	'['            shift, and enter state 25
	if             shift, and enter state 26

	Exp            goto state 18
	Equals         goto state 19
	Match          goto state 20
	OutPattern     goto state 21
	Cond           goto state 22

State 11

	FuncBodyInitArea -> '{' . '}'                       (rule 50)
	FuncBodyInitArea -> '{' . VarInit '}'               (rule 51)
	FuncBodyInitArea -> '{' . VarInit ';' FuncBodyInitAreaRec    (rule 52)

	var            shift, and enter state 16
	'}'            shift, and enter state 17

	Var            goto state 14
	VarInit        goto state 15

State 12

	Main -> main ':' stdin . '>>' funcName '>>' MainRec    (rule 55)
	Main -> main ':' stdin . '>>' funcName '>>' stdout    (rule 56)

	'>>'           shift, and enter state 13


State 13

	Main -> main ':' stdin '>>' . funcName '>>' MainRec    (rule 55)
	Main -> main ':' stdin '>>' . funcName '>>' stdout    (rule 56)

	funcName       shift, and enter state 43


State 14

	VarInit -> Var . '=' intValue                       (rule 27)
	VarInit -> Var . '=' B                              (rule 28)
	VarInit -> Var . '=' var                            (rule 29)

	'='            shift, and enter state 42


State 15

	FuncBodyInitArea -> '{' VarInit . '}'               (rule 51)
	FuncBodyInitArea -> '{' VarInit . ';' FuncBodyInitAreaRec    (rule 52)

	'}'            shift, and enter state 40
	';'            shift, and enter state 41


State 16

	Var -> var . ':' T                                  (rule 26)

	':'            shift, and enter state 39


State 17

	FuncBodyInitArea -> '{' '}' .                       (rule 50)

	var            reduce using rule 50
	'('            reduce using rule 50
	'['            reduce using rule 50
	if             reduce using rule 50


State 18

	FuncDeclaration -> funcName ':' FuncBodyInitArea Exp .    (rule 3)
	Exp -> Exp . ';' Exp                                (rule 9)

	funcName       reduce using rule 3
	';'            shift, and enter state 38
	main           reduce using rule 3
	%eof           reduce using rule 3


State 19

	Exp -> Equals .                                     (rule 6)

	funcName       reduce using rule 6
	')'            reduce using rule 6
	';'            reduce using rule 6
	else           reduce using rule 6
	main           reduce using rule 6
	%eof           reduce using rule 6


State 20

	Equals -> Match . '=' OutPattern                    (rule 17)
	Equals -> Match . '=' Maths                         (rule 18)
	Equals -> Match . '=' Equals                        (rule 19)

	'='            shift, and enter state 37


State 21

	Exp -> OutPattern .                                 (rule 7)

	funcName       reduce using rule 7
	')'            reduce using rule 7
	';'            reduce using rule 7
	else           reduce using rule 7
	main           reduce using rule 7
	%eof           reduce using rule 7


State 22

	Exp -> Cond .                                       (rule 5)

	funcName       reduce using rule 5
	')'            reduce using rule 5
	';'            reduce using rule 5
	else           reduce using rule 5
	main           reduce using rule 5
	%eof           reduce using rule 5


State 23

	Equals -> var . '=' Maths                           (rule 20)
	Equals -> var . '=' B                               (rule 21)

	'='            shift, and enter state 36


State 24

	Exp -> '(' . Exp ')'                                (rule 8)

	var            shift, and enter state 23
	'('            shift, and enter state 24
	'['            shift, and enter state 25
	if             shift, and enter state 26

	Exp            goto state 35
	Equals         goto state 19
	Match          goto state 20
	OutPattern     goto state 21
	Cond           goto state 22

State 25

	Match -> '[' . ']'                                  (rule 30)
	Match -> '[' . eof ']'                              (rule 31)
	Match -> '[' . Var ']'                              (rule 32)
	Match -> '[' . Var ',' MatchRec                     (rule 33)
	OutPattern -> '[' . ']'                             (rule 36)
	OutPattern -> '[' . Maths ',' OutPatternRec         (rule 37)
	OutPattern -> '[' . Maths ']'                       (rule 38)

	intValue       shift, and enter state 30
	var            shift, and enter state 31
	'('            shift, and enter state 32
	']'            shift, and enter state 33
	eof            shift, and enter state 34

	Maths          goto state 28
	Var            goto state 29

State 26

	Cond -> if . '(' ComparableExp ')' ':' Exp else ':' Exp    (rule 49)

	'('            shift, and enter state 27


State 27

	Cond -> if '(' . ComparableExp ')' ':' Exp else ':' Exp    (rule 49)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 78
	trueValue      shift, and enter state 48
	falseValue     shift, and enter state 49
	'!'            shift, and enter state 79

	Maths          goto state 74
	B              goto state 75
	Comparables    goto state 76
	ComparableExp  goto state 77

State 28

	Maths -> Maths . '+' Maths                          (rule 10)
	Maths -> Maths . '-' Maths                          (rule 11)
	Maths -> Maths . '*' Maths                          (rule 12)
	Maths -> Maths . '/' Maths                          (rule 13)
	OutPattern -> '[' Maths . ',' OutPatternRec         (rule 37)
	OutPattern -> '[' Maths . ']'                       (rule 38)

	'+'            shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'/'            shift, and enter state 71
	']'            shift, and enter state 72
	','            shift, and enter state 73


State 29

	Match -> '[' Var . ']'                              (rule 32)
	Match -> '[' Var . ',' MatchRec                     (rule 33)

	']'            shift, and enter state 66
	','            shift, and enter state 67


State 30

	Maths -> intValue .                                 (rule 15)

	funcName       reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'*'            reduce using rule 15
	'/'            reduce using rule 15
	')'            reduce using rule 15
	']'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	else           reduce using rule 15
	main           reduce using rule 15
	'=='           reduce using rule 15
	'<'            reduce using rule 15
	'>'            reduce using rule 15
	%eof           reduce using rule 15


State 31

	Maths -> var .                                      (rule 16)
	Var -> var . ':' T                                  (rule 26)

	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'*'            reduce using rule 16
	'/'            reduce using rule 16
	':'            shift, and enter state 39
	']'            reduce using rule 16
	','            reduce using rule 16


State 32

	Maths -> '(' . Maths ')'                            (rule 14)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 65

State 33

	Match -> '[' ']' .                                  (rule 30)
	OutPattern -> '[' ']' .                             (rule 36)

	funcName       reduce using rule 36
	'='            reduce using rule 30
	')'            reduce using rule 36
	';'            reduce using rule 36
	else           reduce using rule 36
	main           reduce using rule 36
	%eof           reduce using rule 36


State 34

	Match -> '[' eof . ']'                              (rule 31)

	']'            shift, and enter state 64


State 35

	Exp -> '(' Exp . ')'                                (rule 8)
	Exp -> Exp . ';' Exp                                (rule 9)

	')'            shift, and enter state 63
	';'            shift, and enter state 38


State 36

	Equals -> var '=' . Maths                           (rule 20)
	Equals -> var '=' . B                               (rule 21)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32
	trueValue      shift, and enter state 48
	falseValue     shift, and enter state 49

	Maths          goto state 60
	B              goto state 61

State 37

	Equals -> Match '=' . OutPattern                    (rule 17)
	Equals -> Match '=' . Maths                         (rule 18)
	Equals -> Match '=' . Equals                        (rule 19)

	intValue       shift, and enter state 30
	var            shift, and enter state 59
	'('            shift, and enter state 32
	'['            shift, and enter state 25

	Maths          goto state 56
	Equals         goto state 57
	Match          goto state 20
	OutPattern     goto state 58

State 38

	Exp -> Exp ';' . Exp                                (rule 9)

	var            shift, and enter state 23
	'('            shift, and enter state 24
	'['            shift, and enter state 25
	if             shift, and enter state 26

	Exp            goto state 55
	Equals         goto state 19
	Match          goto state 20
	OutPattern     goto state 21
	Cond           goto state 22

State 39

	Var -> var ':' . T                                  (rule 26)

	intType        shift, and enter state 53
	boolType       shift, and enter state 54

	T              goto state 52

State 40

	FuncBodyInitArea -> '{' VarInit '}' .               (rule 51)

	var            reduce using rule 51
	'('            reduce using rule 51
	'['            reduce using rule 51
	if             reduce using rule 51


State 41

	FuncBodyInitArea -> '{' VarInit ';' . FuncBodyInitAreaRec    (rule 52)

	var            shift, and enter state 16

	Var            goto state 14
	VarInit        goto state 50
	FuncBodyInitAreaRecgoto state 51

State 42

	VarInit -> Var '=' . intValue                       (rule 27)
	VarInit -> Var '=' . B                              (rule 28)
	VarInit -> Var '=' . var                            (rule 29)

	intValue       shift, and enter state 46
	var            shift, and enter state 47
	trueValue      shift, and enter state 48
	falseValue     shift, and enter state 49

	B              goto state 45

State 43

	Main -> main ':' stdin '>>' funcName . '>>' MainRec    (rule 55)
	Main -> main ':' stdin '>>' funcName . '>>' stdout    (rule 56)

	'>>'           shift, and enter state 44


State 44

	Main -> main ':' stdin '>>' funcName '>>' . MainRec    (rule 55)
	Main -> main ':' stdin '>>' funcName '>>' . stdout    (rule 56)

	funcName       shift, and enter state 99
	stdout         shift, and enter state 100

	MainRec        goto state 98

State 45

	VarInit -> Var '=' B .                              (rule 28)

	'}'            reduce using rule 28
	';'            reduce using rule 28


State 46

	VarInit -> Var '=' intValue .                       (rule 27)

	'}'            reduce using rule 27
	';'            reduce using rule 27


State 47

	VarInit -> Var '=' var .                            (rule 29)

	'}'            reduce using rule 29
	';'            reduce using rule 29


State 48

	B -> trueValue .                                    (rule 24)

	funcName       reduce using rule 24
	')'            reduce using rule 24
	'}'            reduce using rule 24
	';'            reduce using rule 24
	else           reduce using rule 24
	main           reduce using rule 24
	'=='           reduce using rule 24
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	%eof           reduce using rule 24


State 49

	B -> falseValue .                                   (rule 25)

	funcName       reduce using rule 25
	')'            reduce using rule 25
	'}'            reduce using rule 25
	';'            reduce using rule 25
	else           reduce using rule 25
	main           reduce using rule 25
	'=='           reduce using rule 25
	'<'            reduce using rule 25
	'>'            reduce using rule 25
	%eof           reduce using rule 25


State 50

	FuncBodyInitAreaRec -> VarInit . '}'                (rule 53)
	FuncBodyInitAreaRec -> VarInit . ';' FuncBodyInitAreaRec    (rule 54)

	'}'            shift, and enter state 96
	';'            shift, and enter state 97


State 51

	FuncBodyInitArea -> '{' VarInit ';' FuncBodyInitAreaRec .    (rule 52)

	var            reduce using rule 52
	'('            reduce using rule 52
	'['            reduce using rule 52
	if             reduce using rule 52


State 52

	Var -> var ':' T .                                  (rule 26)

	'='            reduce using rule 26
	']'            reduce using rule 26
	','            reduce using rule 26


State 53

	T -> intType .                                      (rule 23)

	'='            reduce using rule 23
	']'            reduce using rule 23
	','            reduce using rule 23


State 54

	T -> boolType .                                     (rule 22)

	'='            reduce using rule 22
	']'            reduce using rule 22
	','            reduce using rule 22


State 55

	Exp -> Exp . ';' Exp                                (rule 9)
	Exp -> Exp ';' Exp .                                (rule 9)

	funcName       reduce using rule 9
	')'            reduce using rule 9
	';'            shift, and enter state 38
	else           reduce using rule 9
	main           reduce using rule 9
	%eof           reduce using rule 9


State 56

	Maths -> Maths . '+' Maths                          (rule 10)
	Maths -> Maths . '-' Maths                          (rule 11)
	Maths -> Maths . '*' Maths                          (rule 12)
	Maths -> Maths . '/' Maths                          (rule 13)
	Equals -> Match '=' Maths .                         (rule 18)

	funcName       reduce using rule 18
	'+'            shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'/'            shift, and enter state 71
	')'            reduce using rule 18
	';'            reduce using rule 18
	else           reduce using rule 18
	main           reduce using rule 18
	%eof           reduce using rule 18


State 57

	Equals -> Match '=' Equals .                        (rule 19)

	funcName       reduce using rule 19
	')'            reduce using rule 19
	';'            reduce using rule 19
	else           reduce using rule 19
	main           reduce using rule 19
	%eof           reduce using rule 19


State 58

	Equals -> Match '=' OutPattern .                    (rule 17)

	funcName       reduce using rule 17
	')'            reduce using rule 17
	';'            reduce using rule 17
	else           reduce using rule 17
	main           reduce using rule 17
	%eof           reduce using rule 17


State 59

	Maths -> var .                                      (rule 16)
	Equals -> var . '=' Maths                           (rule 20)
	Equals -> var . '=' B                               (rule 21)

	funcName       reduce using rule 16
	'='            shift, and enter state 36
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'*'            reduce using rule 16
	'/'            reduce using rule 16
	')'            reduce using rule 16
	';'            reduce using rule 16
	else           reduce using rule 16
	main           reduce using rule 16
	%eof           reduce using rule 16


State 60

	Maths -> Maths . '+' Maths                          (rule 10)
	Maths -> Maths . '-' Maths                          (rule 11)
	Maths -> Maths . '*' Maths                          (rule 12)
	Maths -> Maths . '/' Maths                          (rule 13)
	Equals -> var '=' Maths .                           (rule 20)

	funcName       reduce using rule 20
	'+'            shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'/'            shift, and enter state 71
	')'            reduce using rule 20
	';'            reduce using rule 20
	else           reduce using rule 20
	main           reduce using rule 20
	%eof           reduce using rule 20


State 61

	Equals -> var '=' B .                               (rule 21)

	funcName       reduce using rule 21
	')'            reduce using rule 21
	';'            reduce using rule 21
	else           reduce using rule 21
	main           reduce using rule 21
	%eof           reduce using rule 21


State 62

	Maths -> var .                                      (rule 16)

	funcName       reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'*'            reduce using rule 16
	'/'            reduce using rule 16
	')'            reduce using rule 16
	']'            reduce using rule 16
	','            reduce using rule 16
	';'            reduce using rule 16
	else           reduce using rule 16
	main           reduce using rule 16
	'=='           reduce using rule 16
	'<'            reduce using rule 16
	'>'            reduce using rule 16
	%eof           reduce using rule 16


State 63

	Exp -> '(' Exp ')' .                                (rule 8)

	funcName       reduce using rule 8
	')'            reduce using rule 8
	';'            reduce using rule 8
	else           reduce using rule 8
	main           reduce using rule 8
	%eof           reduce using rule 8


State 64

	Match -> '[' eof ']' .                              (rule 31)

	'='            reduce using rule 31


State 65

	Maths -> Maths . '+' Maths                          (rule 10)
	Maths -> Maths . '-' Maths                          (rule 11)
	Maths -> Maths . '*' Maths                          (rule 12)
	Maths -> Maths . '/' Maths                          (rule 13)
	Maths -> '(' Maths . ')'                            (rule 14)

	'+'            shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'/'            shift, and enter state 71
	')'            shift, and enter state 95


State 66

	Match -> '[' Var ']' .                              (rule 32)

	'='            reduce using rule 32


State 67

	Match -> '[' Var ',' . MatchRec                     (rule 33)

	var            shift, and enter state 16

	Var            goto state 93
	MatchRec       goto state 94

State 68

	Maths -> Maths '+' . Maths                          (rule 10)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 92

State 69

	Maths -> Maths '-' . Maths                          (rule 11)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 91

State 70

	Maths -> Maths '*' . Maths                          (rule 12)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 90

State 71

	Maths -> Maths '/' . Maths                          (rule 13)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 89

State 72

	OutPattern -> '[' Maths ']' .                       (rule 38)

	funcName       reduce using rule 38
	')'            reduce using rule 38
	';'            reduce using rule 38
	else           reduce using rule 38
	main           reduce using rule 38
	%eof           reduce using rule 38


State 73

	OutPattern -> '[' Maths ',' . OutPatternRec         (rule 37)

	intValue       shift, and enter state 30
	var            shift, and enter state 62
	'('            shift, and enter state 32

	Maths          goto state 87
	OutPatternRec  goto state 88

State 74

	Maths -> Maths . '+' Maths                          (rule 10)
	Maths -> Maths . '-' Maths                          (rule 11)
	Maths -> Maths . '*' Maths                          (rule 12)
	Maths -> Maths . '/' Maths                          (rule 13)
	Comparables -> Maths .                              (rule 41)

	'+'            shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'/'            shift, and enter state 71
	')'            reduce using rule 41
	'=='           reduce using rule 41
	'<'            reduce using rule 41
	'>'            reduce using rule 41


State 75

	Comparables -> B .                                  (rule 42)

	')'            reduce using rule 42
	'=='           reduce using rule 42
	'<'            reduce using rule 42
	'>'            reduce using rule 42


State 76

	ComparableExp -> Comparables .                      (rule 48)
